# polyphony

./: .dockerignore  .env.production.example  .gitignore  .releaserc.json  CLAUDE.md  Cargo.toml  LICENSE  Polyphony.sln  README.md  clippy.toml  docker-compose.local.yml  docker-compose.prod.yml  lefthook.yml  livekit.local.yaml  livekit.prod.yaml  plan.md
crates/backend-api/: Cargo.toml  Dockerfile
crates/backend-api/src/: auth.rs  config.rs  domain.rs  dto.rs  lib.rs  main.rs  notification_hub.rs  observability.rs  openapi.rs  response_mapping.rs  routes.rs  storage.rs
crates/backend-api/src/dto/: add_server_member_request.rs  api_error_response.rs  block_relationship_response.rs  create_channel_request.rs  create_message_request.rs  create_server_request.rs  create_session_request.rs  direct_message_response.rs  direct_message_thread_response.rs  emote_response.rs  friend_request_response.rs  friend_summary_response.rs  health_response.rs  link_preview_response.rs  live_room_participants_response.rs  mark_unread_request.rs  me_response.rs  mute_channel_notifications_request.rs  notification_channel_preference_response.rs  notification_global_preference_response.rs  notification_server_preference_response.rs  notification_unread_count_response.rs  pin_message_request.rs  pinned_message_response.rs  reaction_summary_response.rs  search_direct_messages_query.rs  send_direct_message_request.rs  (+11 more)
crates/backend-api/tests/: auth_and_health_steps.rs  bdd_acceptance.rs  bdd_support.rs  common.rs  entity_seeder.rs  friends_and_dms_steps.rs  identity_and_users_steps.rs  messages_steps.rs  notifications_steps.rs  scenarios.rs  servers_and_channels_steps.rs  voice_sessions_steps.rs
crates/backend-domain/: Cargo.toml
crates/backend-domain/src/: channel.rs  direct_message.rs  display_name.rs  friend_notification_event_type.rs  friend_relationship.rs  ids.rs  lib.rs  membership.rs  message.rs  message_reaction.rs  notification_category_preference.rs  notification_event_type.rs  notification_mute_state.rs  pinned_message.rs  server.rs  user.rs  voice_session.rs
crates/backend-storage/: Cargo.toml
crates/backend-storage/migrations/: 202602280001_server_uuid.sql  202602280002_channel_uuid.sql  202602280003_message_uuid.sql  202602280004_user_internal_uuid.sql  202602280005_date_created_columns.sql  202602280006_voice_session_muted.sql  202602280007_single_voice_channel_per_user.sql  202603010001_channel_kind.sql  202603070001_notifications_outbox.sql  202603070002_notification_preferences.sql  202603070003_notification_user_preferences.sql  202603070004_message_mentions.sql  202603070005_notification_category_preferences.sql  202603110001_friends_and_dms.sql  202603110002_friend_notifications.sql  202604040001_message_reactions.sql  202604050001_pinned_messages.sql  202604060001_enum_types.sql  202607130001_drop_blocks_restored_friendship_fk.sql
crates/backend-storage/src/: in_memory_chat_repository.rs  in_memory_repository.rs  in_memory_store.rs  lib.rs  mutation_result.rs  postgres_chat_repository.rs  postgres_repository.rs  repository.rs  storage_error.rs
crates/backend-storage/tests/: postgres_repository_integration.rs
(+388 files in other folders)
