[package]
name = "backend-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
backend-domain = { path = "../backend-domain" }
backend-storage = { path = "../backend-storage" }
http = "1.3"
jwt-authorizer = "0.15"
livekit-api = "0.4.14"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
rand = "0.9"
sentry = "0.46.2"
sentry-tracing = "0.46.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "sensitive-headers"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
cucumber = "0.21"
futures-util = "0.3"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio-tungstenite = "0.28"
