[package]
name = "backend-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["derive", "postgres"] }
strum = { version = "0.27", features = ["derive"] }
utoipa = { version = "5.4", features = ["uuid"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
