[package]
name = "backend-storage"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
async-trait = "0.1"
backend-domain = { path = "../backend-domain" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid"] }
tokio = { version = "1.47", features = ["sync"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
